src/libopm/expr/antlr-gen/InfixParser.cpp

// Generated from Infix.g4 by ANTLR 4.9.2


#include "InfixListener.h"

#include "InfixParser.h"


using namespace antlrcpp;
using namespace antlr4;

InfixParser::InfixParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

InfixParser::~InfixParser() {
  delete _interpreter;
}

std::string InfixParser::getGrammarFileName() const {
  return "Infix.g4";
}

const std::vector<std::string>& InfixParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& InfixParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- EvalContext ------------------------------------------------------------------

InfixParser::EvalContext::EvalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InfixParser::ExpressionContext* InfixParser::EvalContext::expression() {
  return getRuleContext<InfixParser::ExpressionContext>(0);
}

tree::TerminalNode* InfixParser::EvalContext::EOF() {
  return getToken(InfixParser::EOF, 0);
}

InfixParser::AssignmentContext* InfixParser::EvalContext::assignment() {
  return getRuleContext<InfixParser::AssignmentContext>(0);
}

InfixParser::FunctionDefContext* InfixParser::EvalContext::functionDef() {
  return getRuleContext<InfixParser::FunctionDefContext>(0);
}


size_t InfixParser::EvalContext::getRuleIndex() const {
  return InfixParser::RuleEval;
}

void InfixParser::EvalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEval(this);
}

void InfixParser::EvalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEval(this);
}

InfixParser::EvalContext* InfixParser::eval() {
  EvalContext *_localctx = _tracker.createInstance<EvalContext>(_ctx, getState());
  enterRule(_localctx, 0, InfixParser::RuleEval);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(37);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(28);
      expression(0);
      setState(29);
      match(InfixParser::EOF);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(31);
      assignment();
      setState(32);
      match(InfixParser::EOF);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(34);
      functionDef();
      setState(35);
      match(InfixParser::EOF);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

InfixParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InfixParser::VariableContext* InfixParser::AssignmentContext::variable() {
  return getRuleContext<InfixParser::VariableContext>(0);
}

tree::TerminalNode* InfixParser::AssignmentContext::EQUALS() {
  return getToken(InfixParser::EQUALS, 0);
}

InfixParser::ExpressionContext* InfixParser::AssignmentContext::expression() {
  return getRuleContext<InfixParser::ExpressionContext>(0);
}


size_t InfixParser::AssignmentContext::getRuleIndex() const {
  return InfixParser::RuleAssignment;
}

void InfixParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void InfixParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}

InfixParser::AssignmentContext* InfixParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 2, InfixParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    variable();
    setState(40);
    match(InfixParser::EQUALS);
    setState(41);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDefContext ------------------------------------------------------------------

InfixParser::FunctionDefContext::FunctionDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InfixParser::FuncWVarsContext* InfixParser::FunctionDefContext::funcWVars() {
  return getRuleContext<InfixParser::FuncWVarsContext>(0);
}

tree::TerminalNode* InfixParser::FunctionDefContext::EQUALS() {
  return getToken(InfixParser::EQUALS, 0);
}

InfixParser::ExpressionContext* InfixParser::FunctionDefContext::expression() {
  return getRuleContext<InfixParser::ExpressionContext>(0);
}


size_t InfixParser::FunctionDefContext::getRuleIndex() const {
  return InfixParser::RuleFunctionDef;
}

void InfixParser::FunctionDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDef(this);
}

void InfixParser::FunctionDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDef(this);
}

InfixParser::FunctionDefContext* InfixParser::functionDef() {
  FunctionDefContext *_localctx = _tracker.createInstance<FunctionDefContext>(_ctx, getState());
  enterRule(_localctx, 4, InfixParser::RuleFunctionDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    funcWVars();
    setState(44);
    match(InfixParser::EQUALS);
    setState(45);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncWVarsContext ------------------------------------------------------------------

InfixParser::FuncWVarsContext::FuncWVarsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* InfixParser::FuncWVarsContext::ID() {
  return getToken(InfixParser::ID, 0);
}

tree::TerminalNode* InfixParser::FuncWVarsContext::LPAREN() {
  return getToken(InfixParser::LPAREN, 0);
}

std::vector<InfixParser::VariableContext *> InfixParser::FuncWVarsContext::variable() {
  return getRuleContexts<InfixParser::VariableContext>();
}

InfixParser::VariableContext* InfixParser::FuncWVarsContext::variable(size_t i) {
  return getRuleContext<InfixParser::VariableContext>(i);
}

tree::TerminalNode* InfixParser::FuncWVarsContext::RPAREN() {
  return getToken(InfixParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> InfixParser::FuncWVarsContext::COMMA() {
  return getTokens(InfixParser::COMMA);
}

tree::TerminalNode* InfixParser::FuncWVarsContext::COMMA(size_t i) {
  return getToken(InfixParser::COMMA, i);
}


size_t InfixParser::FuncWVarsContext::getRuleIndex() const {
  return InfixParser::RuleFuncWVars;
}

void InfixParser::FuncWVarsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncWVars(this);
}

void InfixParser::FuncWVarsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncWVars(this);
}

InfixParser::FuncWVarsContext* InfixParser::funcWVars() {
  FuncWVarsContext *_localctx = _tracker.createInstance<FuncWVarsContext>(_ctx, getState());
  enterRule(_localctx, 6, InfixParser::RuleFuncWVars);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(64);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(47);
      match(InfixParser::ID);
      setState(48);
      match(InfixParser::LPAREN);
      setState(49);
      variable();
      setState(50);
      match(InfixParser::RPAREN);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(52);
      match(InfixParser::ID);
      setState(53);
      match(InfixParser::LPAREN);
      setState(57); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(54);
                variable();
                setState(55);
                match(InfixParser::COMMA);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(59); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      setState(61);
      variable();
      setState(62);
      match(InfixParser::RPAREN);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

InfixParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InfixParser::TermContext* InfixParser::ExpressionContext::term() {
  return getRuleContext<InfixParser::TermContext>(0);
}

InfixParser::ExpressionContext* InfixParser::ExpressionContext::expression() {
  return getRuleContext<InfixParser::ExpressionContext>(0);
}

tree::TerminalNode* InfixParser::ExpressionContext::PLUS() {
  return getToken(InfixParser::PLUS, 0);
}

tree::TerminalNode* InfixParser::ExpressionContext::MINUS() {
  return getToken(InfixParser::MINUS, 0);
}


size_t InfixParser::ExpressionContext::getRuleIndex() const {
  return InfixParser::RuleExpression;
}

void InfixParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void InfixParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


InfixParser::ExpressionContext* InfixParser::expression() {
   return expression(0);
}

InfixParser::ExpressionContext* InfixParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  InfixParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  InfixParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, InfixParser::RuleExpression, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(67);
    term(0);
    _ctx->stop = _input->LT(-1);
    setState(77);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(75);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(69);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(70);
          match(InfixParser::PLUS);
          setState(71);
          term(0);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(72);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(73);
          match(InfixParser::MINUS);
          setState(74);
          term(0);
          break;
        }

        default:
          break;
        } 
      }
      setState(79);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

InfixParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InfixParser::FactorContext* InfixParser::TermContext::factor() {
  return getRuleContext<InfixParser::FactorContext>(0);
}

InfixParser::TermContext* InfixParser::TermContext::term() {
  return getRuleContext<InfixParser::TermContext>(0);
}

tree::TerminalNode* InfixParser::TermContext::MULT() {
  return getToken(InfixParser::MULT, 0);
}

tree::TerminalNode* InfixParser::TermContext::DIV() {
  return getToken(InfixParser::DIV, 0);
}

tree::TerminalNode* InfixParser::TermContext::MOD() {
  return getToken(InfixParser::MOD, 0);
}


size_t InfixParser::TermContext::getRuleIndex() const {
  return InfixParser::RuleTerm;
}

void InfixParser::TermContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTerm(this);
}

void InfixParser::TermContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTerm(this);
}


InfixParser::TermContext* InfixParser::term() {
   return term(0);
}

InfixParser::TermContext* InfixParser::term(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  InfixParser::TermContext *_localctx = _tracker.createInstance<TermContext>(_ctx, parentState);
  InfixParser::TermContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, InfixParser::RuleTerm, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(81);
      factor();
      break;
    }

    case 2: {
      setState(82);
      factor();
      setState(83);
      term(4);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(98);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(96);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<TermContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleTerm);
          setState(87);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(88);
          match(InfixParser::MULT);
          setState(89);
          factor();
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<TermContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleTerm);
          setState(90);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(91);
          match(InfixParser::DIV);
          setState(92);
          factor();
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<TermContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleTerm);
          setState(93);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(94);
          match(InfixParser::MOD);
          setState(95);
          factor();
          break;
        }

        default:
          break;
        } 
      }
      setState(100);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FactorContext ------------------------------------------------------------------

InfixParser::FactorContext::FactorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InfixParser::SecondaryContext* InfixParser::FactorContext::secondary() {
  return getRuleContext<InfixParser::SecondaryContext>(0);
}

tree::TerminalNode* InfixParser::FactorContext::MINUS() {
  return getToken(InfixParser::MINUS, 0);
}

InfixParser::FactorContext* InfixParser::FactorContext::factor() {
  return getRuleContext<InfixParser::FactorContext>(0);
}

tree::TerminalNode* InfixParser::FactorContext::PLUS() {
  return getToken(InfixParser::PLUS, 0);
}


size_t InfixParser::FactorContext::getRuleIndex() const {
  return InfixParser::RuleFactor;
}

void InfixParser::FactorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFactor(this);
}

void InfixParser::FactorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFactor(this);
}

InfixParser::FactorContext* InfixParser::factor() {
  FactorContext *_localctx = _tracker.createInstance<FactorContext>(_ctx, getState());
  enterRule(_localctx, 12, InfixParser::RuleFactor);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case InfixParser::LPAREN:
      case InfixParser::LBRACK:
      case InfixParser::INTEGER:
      case InfixParser::NUMBER:
      case InfixParser::IINTEGER:
      case InfixParser::INUMBER:
      case InfixParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(101);
        secondary(0);
        break;
      }

      case InfixParser::MINUS: {
        enterOuterAlt(_localctx, 2);
        setState(102);
        match(InfixParser::MINUS);
        setState(103);
        factor();
        break;
      }

      case InfixParser::PLUS: {
        enterOuterAlt(_localctx, 3);
        setState(104);
        match(InfixParser::PLUS);
        setState(105);
        factor();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SecondaryContext ------------------------------------------------------------------

InfixParser::SecondaryContext::SecondaryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InfixParser::PrimaryContext* InfixParser::SecondaryContext::primary() {
  return getRuleContext<InfixParser::PrimaryContext>(0);
}

InfixParser::SecondaryContext* InfixParser::SecondaryContext::secondary() {
  return getRuleContext<InfixParser::SecondaryContext>(0);
}

tree::TerminalNode* InfixParser::SecondaryContext::POW() {
  return getToken(InfixParser::POW, 0);
}

InfixParser::FactorContext* InfixParser::SecondaryContext::factor() {
  return getRuleContext<InfixParser::FactorContext>(0);
}


size_t InfixParser::SecondaryContext::getRuleIndex() const {
  return InfixParser::RuleSecondary;
}

void InfixParser::SecondaryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSecondary(this);
}

void InfixParser::SecondaryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSecondary(this);
}


InfixParser::SecondaryContext* InfixParser::secondary() {
   return secondary(0);
}

InfixParser::SecondaryContext* InfixParser::secondary(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  InfixParser::SecondaryContext *_localctx = _tracker.createInstance<SecondaryContext>(_ctx, parentState);
  InfixParser::SecondaryContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, InfixParser::RuleSecondary, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(109);
    primary();
    _ctx->stop = _input->LT(-1);
    setState(116);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<SecondaryContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleSecondary);
        setState(111);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(112);
        match(InfixParser::POW);
        setState(113);
        factor(); 
      }
      setState(118);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- PrimaryContext ------------------------------------------------------------------

InfixParser::PrimaryContext::PrimaryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InfixParser::FuncContext* InfixParser::PrimaryContext::func() {
  return getRuleContext<InfixParser::FuncContext>(0);
}

InfixParser::HistrefContext* InfixParser::PrimaryContext::histref() {
  return getRuleContext<InfixParser::HistrefContext>(0);
}

InfixParser::VariableContext* InfixParser::PrimaryContext::variable() {
  return getRuleContext<InfixParser::VariableContext>(0);
}

InfixParser::ConstantContext* InfixParser::PrimaryContext::constant() {
  return getRuleContext<InfixParser::ConstantContext>(0);
}

tree::TerminalNode* InfixParser::PrimaryContext::LPAREN() {
  return getToken(InfixParser::LPAREN, 0);
}

InfixParser::ExpressionContext* InfixParser::PrimaryContext::expression() {
  return getRuleContext<InfixParser::ExpressionContext>(0);
}

tree::TerminalNode* InfixParser::PrimaryContext::RPAREN() {
  return getToken(InfixParser::RPAREN, 0);
}


size_t InfixParser::PrimaryContext::getRuleIndex() const {
  return InfixParser::RulePrimary;
}

void InfixParser::PrimaryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrimary(this);
}

void InfixParser::PrimaryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrimary(this);
}

InfixParser::PrimaryContext* InfixParser::primary() {
  PrimaryContext *_localctx = _tracker.createInstance<PrimaryContext>(_ctx, getState());
  enterRule(_localctx, 16, InfixParser::RulePrimary);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(127);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(119);
      func();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(120);
      histref();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(121);
      variable();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(122);
      constant();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(123);
      match(InfixParser::LPAREN);
      setState(124);
      expression(0);
      setState(125);
      match(InfixParser::RPAREN);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

InfixParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* InfixParser::VariableContext::ID() {
  return getToken(InfixParser::ID, 0);
}


size_t InfixParser::VariableContext::getRuleIndex() const {
  return InfixParser::RuleVariable;
}

void InfixParser::VariableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable(this);
}

void InfixParser::VariableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable(this);
}

InfixParser::VariableContext* InfixParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 18, InfixParser::RuleVariable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    match(InfixParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HistrefContext ------------------------------------------------------------------

InfixParser::HistrefContext::HistrefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* InfixParser::HistrefContext::LBRACK() {
  return getToken(InfixParser::LBRACK, 0);
}

tree::TerminalNode* InfixParser::HistrefContext::INTEGER() {
  return getToken(InfixParser::INTEGER, 0);
}

tree::TerminalNode* InfixParser::HistrefContext::RBRACK() {
  return getToken(InfixParser::RBRACK, 0);
}


size_t InfixParser::HistrefContext::getRuleIndex() const {
  return InfixParser::RuleHistref;
}

void InfixParser::HistrefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHistref(this);
}

void InfixParser::HistrefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InfixListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHistref(this);
}

InfixParser::HistrefContext* InfixParser::histref() {
  HistrefContext *_localctx = _tracker.createInstance<HistrefContext>(_ctx, getState());
  enterRule(_localctx, 20, InfixParser::RuleHistref);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    match(InfixParser::LBRACK);
    setState(132);
    match(InfixParser::INTEGER);
    setState(133);
    match(InfixParser::RBRACK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

InfixParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* InfixParser::ConstantContext::NUMBER() {
  return getToken(InfixParser::NUMBER, 0);
}
